// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` with full pbehavior 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <c-alarm-pbehavior-chip-stub
      color="color"
      icon="icon-name"
    />
  </span>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` with full pbehavior 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div>
    <strong>
      Periodic behaviors
    </strong>
    <div>
      <div
        class="mt-2 font-weight-bold"
      >
          pbehavior-name
      </div>
      <div>
          Author: pbehavior-author
      </div>
      <div>
          Type: type-name
      </div>
      <div>
          Reason: pbehavior-reason-name
      </div>
      <div>
          Last comment:
        <div
          class="ml-2"
        >
            - 
              {
  "display_name": "pbehavior-comment-1-author"
}: 
            pbehavior-comment-1-message
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without comment 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <c-alarm-pbehavior-chip-stub
      color="color"
      icon="icon-name"
    />
  </span>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without comment 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div>
    <strong>
      Periodic behaviors
    </strong>
    <div>
      <div
        class="mt-2 font-weight-bold"
      >
          pbehavior-name
      </div>
      <div>
          Author: pbehavior-author
      </div>
      <div>
          Type: type-name
      </div>
      <div>
          Reason: pbehavior-reason-name
      </div>
      <!---->
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without comment author 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <c-alarm-pbehavior-chip-stub
      color="color"
      icon="icon-name"
    />
  </span>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without comment author 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div>
    <strong>
      Periodic behaviors
    </strong>
    <div>
      <div
        class="mt-2 font-weight-bold"
      >
          pbehavior-name
      </div>
      <div>
          Author: pbehavior-author
      </div>
      <div>
          Type: type-name
      </div>
      <div>
          Reason: pbehavior-reason-name
      </div>
      <div>
          Last comment:
        <div
          class="ml-2"
        >
            - 
              {
  "display_name": "pbehavior-comment-1-author"
}: 
            pbehavior-comment-1-message
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without reason 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <c-alarm-pbehavior-chip-stub
      color="color"
      icon="icon-name"
    />
  </span>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without reason 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div>
    <strong>
      Periodic behaviors
    </strong>
    <div>
      <div
        class="mt-2 font-weight-bold"
      >
          pbehavior-name
      </div>
      <div>
          Author: pbehavior-author
      </div>
      <div>
          Type: type-name
      </div>
      <!---->
      <div>
          Last comment:
        <div
          class="ml-2"
        >
            - 
              {
  "display_name": "pbehavior-comment-1-author"
}: 
            pbehavior-comment-1-message
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
</div>
`;
